<resources>
    <string name="appwidget_text">Coin</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_title">Crypto Coin Price Table</string>
    <string name="edit">Edit</string>
    <string name="delete">reset</string>
    <string name="tab_text_1">Coin Market</string>
    <string name="tab_text_2">Currency</string>
    <string name="action_settings">Settings</string>
    <string name="sell">Sell:&#160;</string>
    <string name="buy">Buy:&#160;</string>
    <string name="currency_widget_title">Currency Table</string>
    <string name="coin_title">Coin widget</string>
    <string name="currency_title">Currency Widget</string>
    <string name="toast_message_1">You should select %s currency</string>
    <string name="toast_message_coin_limit">Limit is %s coins</string>
    <string name="toast_message_2">You should select %s coin</string>
    <string name="toast_message_currency_limit">Limit is %s currency</string>
    <string name="add_currencies">Add Currencies</string>
    <string name="add_coins">Add Coins</string>
    <string name="refreshing">Refreshing</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="coin_edit">Coin Edit</string>
    <string name="currency_edit">Currency Edit</string>
    <string name="reset_coins">Reset Coins</string>
    <string name="reset_currency">Reset Currency</string>
    <string name="about">About</string>
    <string name="sure">Are you sure to reset custom %s from widget?</string>
    <string name="successfully_deleted">Custom %s for widget was successfully deleted</string>
    <string name="some_wrong">Something went wrong!</string>
    <string name="items_added">custom %s was added for widget</string>
    <string name="tracking">Tracking</string>
    <string name="price_btc">Price(BTC)</string>
    <string name="price_usd">Price(USD)</string>
    <string name="an_hour_change">1 Hour Change</string>
    <string name="a_day_change">24 Hours Change</string>
    <string name="a_week_change">A Week Change</string>
    <array name="tracking_mode">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </array>
</resources>
